# pallete_remote_control_tutorial

src/agv_description/: CMakeLists.txt  package.xml
src/agv_description/config/: joint_names_URDF_AGV_ASSY.yaml
src/agv_description/launch/: gazebo.launch  gazebo_slam.launch  test.launch  view_agv_urdf.launch
src/agv_description/mesha/: wheel.stl
src/agv_description/meshes/: RPLidar_FL.STL  RPLidar_RR.STL  WHEEL_FL.STL  WHEEL_FR.STL  WHEEL_RL.STL  WHEEL_RR.STL
src/agv_description/rviz/: agv_urdf.rviz
src/agv_description/scripts/: get_samples.py
src/agv_description/urdf/: agv.urdf  agv_gazebo.urdf  change_list  common.xacro  pallete_rev1.csv  pallete_rev1.urdf  spider.urdf
src/agv_navigation/: CMakeLists.txt  package.xml
src/agv_navigation/config/: agv.lua  teb_local_planner_params.yaml
src/agv_navigation/eband_param/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
src/agv_navigation/launch/: amcl.launch  localization.launch  move_base.launch  navigation.launch  navigation_dwa.launch  navigation_eband.launch  navigation_pallete_rev1.launch  navigation_remote.launch  navigation_teb.launch
src/agv_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/agv_navigation/rviz/: agv.rviz  bag_replay.rviz
src/agv_navigation/scripts/: trajectory_vis.py
src/agv_navigation/teb_param/: base_local_planner_params_diff.yaml  base_local_planner_params_omni.yaml  costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/agv_simulation/: CMakeLists.txt  package.xml
src/agv_simulation/config/: agv.lua  agv_localization.lua
src/agv_simulation/include/agv_simulation/: gazebo_ros_force_based_move.h
src/agv_simulation/launch/: gazebo.launch  gazebo_localization.launch  gazebo_navigation.launch  gazebo_slam.launch  test_navigation.launch
src/agv_simulation/maps/: map.pgm  map_gazebo.pgm  map_gazebo.yaml  simple_world.pgm  simple_world.yaml  simulation_testbed.pgm  simulation_testbed.yaml  test_field.pgm  test_field.yaml  testbed_3.yaml  testfield.pgm  testfield.yaml
src/agv_simulation/scripts/: move_base_test_code
src/agv_simulation/src/: gazebo_ros_force_based_move.cpp  p2p_test_code .py  simple_p2p.cpp
src/agv_simulation/worlds/: simple_world.world  test_field.world  test_field_2.world  testbed_3.world
src/agv_slam/: CMakeLists.txt  log.txt  package.xml
src/agv_slam/config/: agv.lua  agv_localization.lua  gmapping_params.yaml
src/agv_slam/include/agv_slam/: flat_world_imu_node.h
src/agv_slam/launch/: cartographer.launch  gmapping.launch  replay_bag_slam.launch  sim_slam.launch  slam.launch  slam_pallete_rev1.launch  turtlebot3_slam.launch
src/agv_slam/maps/: 2021_09_14_13_20_00.pgm  2021_09_14_13_20_00.yaml  map.pgm  map.yaml  testbed.pgm  testbed.yaml  testbed_2.pgm  testbed_2.yaml  testbed_3.pgm  testbed_3.yaml
src/agv_slam/rviz/: cartographer.rviz  gmapping.rviz
src/agv_slam/src/: flat_world_imu_node.cpp
src/agv_slam/urdf/: agv.urdf.xacro
src/aliencontrol/: readme.md
src/battery/: CMakeLists.txt  README.md  package.xml
src/battery/launch/: base.launch  base_dummy.launch  base_powercraft.launch  base_qucc.launch
src/battery/src/dummy/: dummy.cpp
src/battery/src/powercraft/: powercraft.cpp
src/battery/src/qucc/: main.cpp  qucc.cpp  qucc.h
src/chatterbox/: .gitignore  CMakeLists.txt  package.xml
src/chatterbox/launch/: base_joystick.launch  base_web.launch  client_joystick.launch  client_local.launch  client_view.launch  client_view_mecanum.launch  server_web.launch  test_joystick.launch  test_local.launch  test_view.launch  test_view_mecanum.launch  test_web.launch
src/chatterbox/msg/: BatteryState.msg  ChatIn.msg  ChatOut.msg
src/chatterbox/src/: main.cpp
src/navigation/amcl/src/: amcl_node.cpp
src/recipelab/: CMakeLists.txt  package.xml
src/recipelab/cfg/: GainTuning.cfg
src/recipelab/desktop/: launch.sh
src/recipelab/launch/: base.launch  base_pallete.launch  sim_pallete.launch
src/recipelab/rviz/: sim_pallete.rviz  view.rviz  view_lunchbox.rviz
src/recipelab/src/: AGVCallBack.cpp  AGVCallBack.h  AGVConfig.h  AGVSource.cpp  main.cpp  main.h
src/set_time_laserscan/: CMakeLists.txt  package.xml
src/set_time_laserscan/scripts/: run.py
